# SynchroB

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MCP_SETUP.md  README.md  README_STEP1.md  batch_analyze.py  config.py  env.example  pyproject.toml  repos.txt  requirements-step3.txt  requirements.txt  step1_cli.py  step2_cli.py  test_firecrawl.py  test_gemini.py
.cursor/rules/: step1-product-analysis.mdc  step2-generalization.mdc  technical-dna.mdc
.github/workflows/: ci.yml
batch_results/: Arduino.json  ClickHouse.json  Rocket.Chat.json  appsmith.json  batch_results.json  brave-browser.json  core.json  dbeaver.json  dem.json  erpnext.json  ghidra.json  gitea.json  godot.json  grafana.json  growstuff.json  keycloak.json  magento2.json  mastodon.json  metabase.json  neovim.json  odoo.json  pipedream.json  prometheus.json  sentry.json  strapi.json  superset.json  tidb.json  woocommerce.json  zulip.json
guidelines/: technical_extraction_guidelines.md
landing-page/: early-access.html  index.html
skills/repo-analyzer/: SKILL.md
skills/repo-analyzer/evals/: evals.json
skills/repo-analyzer/scripts/: extract_repo_structure.py
src/: __init__.py  cache.py  constants.py  utils.py
src/analysis/: __init__.py  claude_client.py  gemini_client.py  openai_client.py
src/discovery/: __init__.py  github_discovery.py  llm_knowledge.py  local_repo_discovery.py  merger.py  models.py  openapi_discovery.py  orchestrator.py  package_registry.py  web_scraping.py
src/ingestion/: README.md  __init__.py  firecrawl_client.py
src/step1/: __init__.py  analysis_strategy.py  processor.py
src/step2/: __init__.py  generalization_strategy.py  generalizer.py
step3/: FRONTEND_PROMPT.md  api_server.py  build_index.py  filter_options.json  matching_engine.py  product_index.json  requirements.txt
tests/: conftest.py  test_cache.py  test_github_discovery.py  test_integration_local_repo.py  test_local_repo_discovery.py  test_merger.py  test_models.py  test_strategies.py  test_utils.py
